Añadir controladores y mejorar diseño de usuario
Se ha añadido un enlace a la hoja de estilos de Font Awesome en `_Layout.cshtml` y se ha modificado la sección de información del usuario. Se han creado varios controladores (`AccountController`, `CatalogController`, `DashboardController`, `ReportsController`, `ReservationsController`, `UsersController`) con acciones básicas. Además, se han añadido archivos de vista vacíos con comentarios para facilitar el desarrollo de la interfaz de usuario.

--- a/Bilioteca/Views/Shared/_Layout.cshtml
+++ b/Bilioteca/Views/Shared/_Layout.cshtml
@@ -10,6 +10,7 @@
     <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" />
     <link rel="stylesheet" href="~/css/site.css" asp-append-version="true" />
     <link rel="stylesheet" href="~/Bilioteca.styles.css" asp-append-version="true" />
+    <link href="https://use.fontawesome.com/releases/v5.0.6/css/all.css" rel="stylesheet">
 </head>
 <body>
 
@@ -31,12 +32,12 @@
                 <div class="sidebar-header">
                     <div class="user-pic">
                         <img class="img-responsive img-rounded"
-                             src="~/images/users/@User.Identity.Name.png"
+                             src="~/images/users/"
                              alt="User picture">
                     </div>
                     <div class="user-info">
                         <span class="user-name">
-                            @User.Identity.Name
+                            FM
                         </span>
                         <span class="user-role">Bibliotecario</span>
                         <span class="user-status">
