--- a/Bilioteca/Views/Dashboard/Index.cshtml
+++ b/Bilioteca/Views/Dashboard/Index.cshtml
@@ -5,9 +5,16 @@
 }
 
 
+
+
 <select class="form-select" aria-label="Default select example">
     <option selected>Open this select menu</option>
     <option value="1">One</option>
     <option value="2">Two</option>
     <option value="3">Three</option>
 </select>
+
+
+@section Scripts {
+    <script src="~/modules/Dashboard/js/dashboard.js"></script>
+}
