--- a/Bilioteca/Views/Shared/_Layout.cshtml
+++ b/Bilioteca/Views/Shared/_Layout.cshtml
@@ -10,6 +10,9 @@
     <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" />
     <link rel="stylesheet" href="~/css/site.css" asp-append-version="true" />
     <link rel="stylesheet" href="~/Bilioteca.styles.css" asp-append-version="true" />
+
+    @await RenderSectionAsync("Style", required: false)
+
     <link href="https://use.fontawesome.com/releases/v5.0.6/css/all.css" rel="stylesheet">
 </head>
 <body>
