--- a/Bilioteca/Views/Dashboard/Index.cshtml
+++ b/Bilioteca/Views/Dashboard/Index.cshtml
@@ -1,19 +1,61 @@
-﻿@*
-    For more information on enabling MVC for empty projects, visit https://go.microsoft.com/fwlink/?LinkID=397860
-*@
-@{
+﻿
+<div class="container">
+    <div class="parent">
+        <!-- Tarjetas KPI -->
+        <div class="div1">
+            <div class="card">
+                <div class="card-body">
+                    <h5 class="card-title">Ventas</h5>
+                    <p class="card-text" id="ventasKPI">0</p>
+                </div>
+            </div>
+        </div>
+        <div class="div2">
+            <div class="card">
+                <div class="card-body">
+                    <h5 class="card-title">Usuarios</h5>
+                    <p class="card-text" id="usuariosKPI">0</p>
+                </div>
+            </div>
+        </div>
+        <div class="div3">
+            <div class="card">
+                <div class="card-body">
+                    <h5 class="card-title">Ingresos</h5>
+                    <p class="card-text" id="ingresosKPI">$0</p>
+                </div>
+            </div>
+        </div>
+
+        <!-- Gráficos -->
+        <div class="div4">
+            <div class="card">
+                <div class="card-body chart-container">
+                    <canvas id="ventasChart"></canvas>
+                </div>
+            </div>
+        </div>
+        <div class="div5">
+            <div class="card">
+                <div class="card-body chart-container">
+                    <canvas id="usuariosChart"></canvas>
+                </div>
+            </div>
+        </div>
+        <div class="div6">
+            <div class="card">
+                <div class="card-body chart-container">
+                    <canvas id="ingresosChart"></canvas>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
+
+
+@section Styles {
+    <link rel="stylesheet" href="~/modules/Dashboard/css/dashboard.css" />
 }
-
-
-
-
-<select class="form-select" aria-label="Default select example">
-    <option selected>Open this select menu</option>
-    <option value="1">One</option>
-    <option value="2">Two</option>
-    <option value="3">Three</option>
-</select>
-
 
 @section Scripts {
     <script src="~/modules/Dashboard/js/dashboard.js"></script>
