Integración de Semantic UI y Font Awesome
Se han añadido nuevos estilos y scripts para integrar Semantic UI y Font Awesome en el proyecto. En `Index.cshtml`, se ha agregado un botón animado con el texto "Next" y un icono de flecha a la derecha, mejorando la interfaz de usuario.

Se ha actualizado `_Layout.cshtml` con nuevas hojas de estilo y scripts, eliminando referencias obsoletas. Además, se han realizado cambios en la sección de información del usuario y se ha añadido un nuevo script para Semantic UI.

Se han actualizado los archivos de fuentes `fa-regular-400.woff2` y `fa-solid-900.woff2` con nuevos iconos y estilos.

Se han introducido animaciones CSS en `semantic.min.css`, como `tada`, `pulse`, `jiggle` y `glow`, que mejoran la interactividad de la interfaz.

Finalmente, se ha añadido un bloque de comentarios en `semantic.min.js` que proporciona información sobre la versión y la licencia.

--- a/Bilioteca/Views/Shared/_Layout.cshtml
+++ b/Bilioteca/Views/Shared/_Layout.cshtml
@@ -8,12 +8,12 @@
 
 
     <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" />
+    <link rel="stylesheet" href="~/lib/font-awesome/css/all.min.css" />
+    <link  rel="stylesheet" href="~/lib/semantic-ui/css/semantic.min.css"/>
     <link rel="stylesheet" href="~/css/site.css" asp-append-version="true" />
     <link rel="stylesheet" href="~/Bilioteca.styles.css" asp-append-version="true" />
 
     @await RenderSectionAsync("Styles", required: false)
-
-    <link href="https://use.fontawesome.com/releases/v5.0.6/css/all.css" rel="stylesheet">
 </head>
 <body>
 
@@ -34,9 +34,9 @@
                 <!-- User Info -->
                 <div class="sidebar-header">
                     <div class="user-pic">
-                        <img class="img-responsive img-rounded"
+@*                         <img class="img-responsive img-rounded"
                              src="~/images/users/"
-                             alt="User picture">
+                             alt="User picture"> *@
                     </div>
                     <div class="user-info">
                         <span class="user-name">
@@ -139,6 +139,7 @@
 
     <script src="~/lib/jquery/dist/jquery.min.js"></script>
     <script src="~/lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
+    <script src="~/lib//semantic-ui/js/semantic.min.js"></script>
     <script src="~/lib/chartjs/chart.umd.js"></script>
     <script src="~/js/site.js" asp-append-version="true"></script>
     @await RenderSectionAsync("Scripts", required: false)
