--- a/Bilioteca/Views/Dashboard/Index.cshtml
+++ b/Bilioteca/Views/Dashboard/Index.cshtml
@@ -1,5 +1,14 @@
 ﻿
 <div class="container">
+
+    <div class="ui animated button" tabindex="0">
+        <div class="visible content">Next</div>
+        <div class="hidden content">
+            <i class="fas fa-arrow-right"></i>
+        </div>
+    </div>
+
+
     <div class="parent">
         <!-- Tarjetas KPI -->
         <div class="div1">
