--- a/Bilioteca/Views/Catalog/Index.cshtml
+++ b/Bilioteca/Views/Catalog/Index.cshtml
@@ -1,5 +1,10 @@
-﻿@*
-    For more information on enabling MVC for empty projects, visit https://go.microsoft.com/fwlink/?LinkID=397860
-*@
-@{
-}
+﻿
+
+<div class="ui search">
+    <div class="ui icon input">
+        <input class="prompt" type="text" placeholder="Common passwords...">
+        <i class="fas fa-search"></i>
+    </div>
+    <div class="results"></div>
+</div>
+
