--- a/Bilioteca/Views/Catalog/Index.cshtml
+++ b/Bilioteca/Views/Catalog/Index.cshtml
@@ -1,10 +1,5 @@
 ﻿
 
-<div class="ui search">
-    <div class="ui icon input">
-        <input class="prompt" type="text" placeholder="Common passwords...">
-        <i class="fas fa-search"></i>
-    </div>
-    <div class="results"></div>
-</div>
 
+
+<i class="bi bi-0-square"></i>
