Actualiza columnas de la tabla en Index.cshtml y catalog.js
Se ha eliminado la columna "Género" y se ha añadido "Cantidad" en `Index.cshtml`.
En `catalog.js`, se han eliminado las columnas "Género", "Año", "Disponibilidad" y "Acciones", y se han añadido "Cantidad", "ISBN" y "Ubicación".
Además, se ha implementado un renderizador personalizado para botones de editar y eliminar en la tabla.

--- a/Bilioteca/Views/Catalog/Index.cshtml
+++ b/Bilioteca/Views/Catalog/Index.cshtml
@@ -8,7 +8,7 @@
                 <tr>
                     <th>Título</th>
                     <th>Autor</th>
-                    <th>Género</th>
+                    <th>Cantidad</th>
                     <th>Año</th>
                     <th>Disponibilidad</th>
                     <th>Acciones</th>
