--- a/Bilioteca/Views/Account/Login.cshtml
+++ b/Bilioteca/Views/Account/Login.cshtml
@@ -1,5 +1,47 @@
-﻿@*
-    For more information on enabling MVC for empty projects, visit https://go.microsoft.com/fwlink/?LinkID=397860
-*@
+﻿
 @{
+    Layout = null;
 }
+
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+    <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" />
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
+    <link href="~/modules/Account/css/login.css" rel="stylesheet" />
+
+
+    <title>Login</title>
+</head>
+<body>
+
+    <!--form area start-->
+    <div class="form">
+        <!--login form start-->
+        <form class="login-form" action="" method="post">
+
+            <i class="bi bi-person-circle"></i>
+
+            <input class="user-input" type="text" name="" placeholder="Usuario" required>
+            <input class="user-input" type="password" name="" placeholder="Clave" required>
+            <div class="options-01">
+                <label class="remember-me"><input type="checkbox" name="">Remember me</label>
+                <a href="#">Forgot your password?</a>
+            </div>
+            <input class="btn" type="submit" name="" value="LOGIN">
+            <div class="options-02">
+                <p>Not Registered? <a href="#">Create an Account</a></p>
+            </div>
+        </form>
+
+    </div>
+
+    <script src="~/lib/jquery/dist/jquery.min.js"></script>
+    <script src="~/lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
+    <script src="~/modules/Account/js/login.js"></script>
+
+</body>
+</html>
