Implementar sistema de inicio de sesión
Se han realizado cambios significativos en varios archivos para implementar un sistema de inicio de sesión en la aplicación.

- Se añadió `AccountService` en `AccountController.cs` y se implementó el método `Login`.
- Se eliminaron métodos innecesarios en `DashboardController.cs`.
- Se registró `AccountService` en `ServiceRegistration.cs`.
- Se actualizaron los campos del formulario en `Login.cshtml` para que coincidan con el modelo `Login`.
- Se reescribió el script en `login.js` para manejar el envío del formulario mediante AJAX.
- Se creó el modelo `Login` en `Login.cs` con propiedades `Email` y `Password`.
- Se implementó la lógica de inicio de sesión en `AccountService.cs` utilizando un procedimiento almacenado.

Estos cambios permiten una gestión más eficiente y estructurada del inicio de sesión de los usuarios.

--- a/Bilioteca/Views/Account/Login.cshtml
+++ b/Bilioteca/Views/Account/Login.cshtml
@@ -25,8 +25,8 @@
 
             <i class="bi bi-person-circle"></i>
 
-            <input class="user-input" type="text" name="" placeholder="Usuario" required>
-            <input class="user-input" type="password" name="" placeholder="Clave" required>
+            <input class="user-input" type="text" name="email-user" placeholder="Usuario" required>
+            <input class="user-input" type="password" name="password-user" placeholder="Clave" required>
             <div class="options-01">
                 <label class="remember-me"><input type="checkbox" name="">Remember me</label>
                 <a href="#">Forgot your password?</a>
