Mejorar gestión de errores en el inicio de sesión
Se actualiza el método `Login` en `AccountController.cs` para devolver un objeto `LoginResult`, permitiendo un manejo más descriptivo de errores. En `AccountService.cs`, se modifica el método `Login` para que retorne un `LoginResult` en lugar de un booleano, mejorando la gestión de parámetros de salida en la consulta SQL.

Se realizan cambios en `Login.cshtml` para añadir identificadores a los campos de entrada, mejorando la accesibilidad. En `login.js`, se actualiza el manejo del evento de envío del formulario y se mejora la gestión de errores en la respuesta AJAX utilizando `Swal.fire`.

Se añade la clase `LoginResult` en `LoginResult.cs` para encapsular el código y mensaje de error, proporcionando una estructura más clara para los resultados del inicio de sesión.

--- a/Bilioteca/Views/Account/Login.cshtml
+++ b/Bilioteca/Views/Account/Login.cshtml
@@ -21,12 +21,12 @@
     <!--form area start-->
     <div class="form">
         <!--login form start-->
-        <form class="login-form" action="" method="post">
+        <form id="loginForm" class="login-form" action="" method="post">
 
             <i class="bi bi-person-circle"></i>
 
-            <input class="user-input" type="text" name="email-user" placeholder="Usuario" required>
-            <input class="user-input" type="password" name="password-user" placeholder="Clave" required>
+            <input id="email-user" class="user-input" type="text" placeholder="Usuario" required>
+            <input id="password-user" class="user-input" type="password" placeholder="Clave" required>
             <div class="options-01">
                 <label class="remember-me"><input type="checkbox" name="">Remember me</label>
                 <a href="#">Forgot your password?</a>
