--- a/Bilioteca/Views/Users/Index.cshtml
+++ b/Bilioteca/Views/Users/Index.cshtml
@@ -55,6 +55,12 @@
                         <input type="email" class="form-control" id="email" name="email" required>
                     </div>
 
+                    <!-- Password -->
+                    <div class="mb-3">
+                        <label for="text" class="form-label">Clave</label>
+                        <input type="text" class="form-control" id="password" name="password" required>
+                    </div>
+
                     <!-- Carrera -->
                     <div class="mb-3">
                         <label for="carrera" class="form-label">Carrera</label>
