Añadir actualización de usuario y eliminar funcionalidad de eliminación
Se ha implementado un nuevo método `UpdateUser` en el controlador `UsersController.cs` para actualizar la información de los usuarios mediante solicitudes HTTP PATCH.

Se ha agregado la propiedad `NOMBRE` en el modelo `UserModel.cs` y se ha implementado el método correspondiente en `UserService.cs`, que ejecuta un procedimiento almacenado para realizar la actualización.

Además, se ha añadido una columna "Nombre" en la tabla de usuarios en `Index.cshtml`, mientras que se ha eliminado el modal de confirmación para la eliminación de usuarios, así como las funciones relacionadas en `users.js`.

--- a/Bilioteca/Views/Users/Index.cshtml
+++ b/Bilioteca/Views/Users/Index.cshtml
@@ -13,6 +13,7 @@
                 <tr>
                     <th>ID</th>
                     <th>Email</th>
+                    <th>Nombre</th>
                     <th>Apellido</th>
                     <th>Carrera</th>
                     <th>Matrícula</th>
@@ -102,26 +103,6 @@
                 </div>
             </div>
         </form>
-    </div>
-</div>
-
-
-<!-- Modal para Confirmar Eliminación -->
-<div class="modal fade" id="modalEliminar" tabindex="-1" aria-labelledby="modalEliminarLabel" aria-hidden="true">
-    <div class="modal-dialog">
-        <div class="modal-content">
-            <div class="modal-header">
-                <h5 class="modal-title" id="modalEliminarLabel">Eliminar Usuario</h5>
-                <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Cerrar"></button>
-            </div>
-            <div class="modal-body">
-                ¿Está seguro de que desea eliminar este usuario?
-            </div>
-            <div class="modal-footer">
-                <button type="button" class="btn btn-danger" id="btnConfirmarEliminar">Eliminar</button>
-                <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cancelar</button>
-            </div>
-        </div>
     </div>
 </div>
 
